Mini cards and end

--- a/krit/Main.html
+++ b/krit/Main.html
@@ -39,7 +39,7 @@
             <p>Каждый башкир знает поэта Салавата Юлаева, как национального героя и революционера. В его честь...</p>
         </div>
     </div>
-    <a href="https://www.youtube.com/watch?v=6-QoF1qY9Bw&t=21s">
+    <a href="">
     <div class="card">
 
         <img src="photos/2.jpg">
@@ -70,14 +70,66 @@
 <div class="mini_cards_section_intro">
     <h1>Помимо знаковых мест, Уфа хранит множество уголков, которые подарят особые впечатления.</h1>
 </div>
-<div class="mini_cards_section"></div>
+<div class="mini_cards_section">
+    <div class="mini_card">
+        <img src="photos/filename-ufa-museum-jpg.jpg">
+        <div>
+            <h1>Национальный музей</h1>
+            <p>Один из старейших национальных музеев страны основан в 1864 году. Более трех десятков лет его основное подразделение размещается в здании, где до революции находится банк. После 1917 года в нем функционировали различные государственные учреждения. Основной темой экспозиций музея выступает история Башкирии, которая освещается с самых разных сторон. </p>
+        </div>
+    </div>
 
+    <div class="mini_card">
+        <div>
+            <h1>Набережная реки Белой</h1>
+            <p>Живописная прогулочная зона с амфитеатром, просторными деревянными шезлонгами и деревьями в разноцветных кадках. Спортсменам придутся по душе велодорожки, а детям — качели под навесами от солнца. Идеально прийти сюда под вечер, чтобы насладиться закатом.</p>
+        </div>
+        <img src="photos/belaya.jpg">
+    </div>
 
+    <div class="mini_card">
+        <img src="photos/12.jpg">
+        <div>
+            <h1>Парк «Мега»</h1>
+            <p>Новая зона отдыха, главная особенность которой — деревянный дракон с длинным хвостом — это детская площадка. В парке есть пруд, водопад и скейт-чаша, где можно кататься на роликах, трюковых самокатах и скейтах. По периметру стоят необычные арт-беседки: в темное время суток на них загорается иллюминация.</p>
+        </div>
+    </div>
 
-<div class="long">
+    <div class="mini_card">
+        <div>
+            <h1>Скала Висячий камень</h1>
+            <p>Причудливая скала 110-метровой высоты, окруженная лиственницами. С обрыва открывается завораживающая панорама на реку. Здесь назначают свидания и устраивают пикники. В дождь на возвышение лучше не подниматься — это опасно.</p>
+        </div>
+        <img src="photos/visjachii-kamen-img-63ebc23f7fba0-big.jpg">
+    </div>
+
+    <div class="mini_card">
+        <img src="photos/original.jpg">
+        <div>
+            <h1>Фонтан «Семь девушек»</h1>
+            <p>Фонтан изображает содержание широко распространенной башкирской легенды, в которой рассказывается о семи сестрах. Она имеет печальный сюжет, описывающий нападение врагов на селение девушек, смерть мужчин и заточение сестер с невозможностью побега из-за умышленно израненных захватчиками ног. Несмотря на мучительную боль, девушки решились бежать, а когда замысел не удался, они предпочли утонуть, чем снова попасть в рабство.</p>
+        </div>
+    </div>
+
+    <div class="mini_card">
+        <div>
+            <h1>Башкирский государственный театр оперы и балета</h1>
+            <p>Основан в декабре 1938 года. Выделяется активным внедрением в репертуар классических музыкальных произведений, которые исполняются на башкирском языке. Здание театра является памятником архитектуры, наглядно демонстрирующим традиционные черты классицизма первой половины XX века.</p>
+        </div>
+        <img src="photos/0e326d4f8aec34f229d4b5a1856b4369.jpg">
+    </div>
+
 </div>
-<div class="section2">
 
+
+<div class="section2">
+<div class="end">
+    <div class="source">
+        <h1>Источники</h1>
+        <a href="https://xn--b1afab9anqfdfg9c.xn--p1ai/article/gorod-ufa">https://xn--b1afab9anqfdfg9c.xn--p1ai/article/gorod-ufa</a><br>
+        <a href="https://dzen.ru/a/Ydmx0U3YuAeWRthd">https://dzen.ru/a/Ydmx0U3YuAeWRthd</a>
+    </div>
+</div>
 </div>
 </body>
 </html>
